# 2022-02-anchor

./: README.md
contracts/cross-chain-contracts/: README.md  constants.ts  hardhat.config.ts  jest.config.js  package-lock.json  package.json  tsconfig.json
contracts/cross-chain-contracts/ethereum/: CrossAnchorBridge.sol
contracts/cross-chain-contracts/scripts/: attest_token.ts  bridge_deploy.ts  bridge_upgrade.ts  migrate_eth.ts  migrate_terra.ts
contracts/cross-chain-contracts/terra/: Cargo.toml
contracts/cross-chain-contracts/terra/artifacts/: addressproxy.wasm  checksums.txt  crossanchor_core.wasm  cw20_wrapped.wasm  token_bridge.wasm  wormhole.wasm  wormhole_bridge.wasm
contracts/cross-chain-contracts/terra/contracts/addressproxy/: Cargo.toml
contracts/cross-chain-contracts/terra/contracts/addressproxy/src/: contract.rs  state.rs
contracts/cross-chain-contracts/terra/contracts/crossanchor-core/: Cargo.toml
contracts/cross-chain-contracts/terra/contracts/crossanchor-core/src/: borrows.rs  contract.rs  deposits.rs  gov.rs  helpers.rs  lib.rs  state.rs
contracts/cross-chain-contracts/terra/contracts/wormhole-bridge/: Cargo.toml
contracts/cross-chain-contracts/terra/contracts/wormhole-bridge/src/: contract.rs  lib.rs  state.rs  util.rs
contracts/cross-chain-contracts/tests/: 1_deposit_stable.test.ts  2_redeem_stable.test.ts  3_lock_collateral.test.ts  4_unlock_collateral.test.ts  5_borrow_stable.test.ts  (+1 more)
discord-export/: Code4rena - ARCHIVE-Q1-2022 - ☑anchor-feb24 [945773656796176384].html  Code4rena - ARCHIVE-Q1-2022 - ☑anchor-feb24 [945773656796176384].txt
(+3 files in other folders)
