[workspace]
members = [
    "contracts/wormhole-bridge",
    "contracts/addressproxy",
    "contracts/crossanchor-core",
    "packages/*"
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true