[package]
name = "addressproxy"
version = "0.0.1"
authors = [""]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "0.16.2" }
cw-storage-plus = { version = "0.9.1" }
cw20 = "0.9.1"
hex = "*"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
sha3 = { version = "0.10.0", default-features = false }
thiserror = { version = "1.0.30" }
terraswap = "2.4.0"
crossanchor = { path = "../../packages/crossanchor", default-features = false, version = "1.0.0"}
protobuf = { version = "2", features = ["with-bytes"] }
anchor-token = "0.2.0"

[dev-dependencies]
cosmwasm-schema = { version = "0.16.2" }
cosmwasm-vm = { version = "0.16.2", default-features = false }
serde_json = "1.0"
